Fixed Spring test to make it work also with @SpringBootTest
Using a ContextConfiguration annotation on base Spring class
breaks the the usage of @SpringBootTest annotation