@@ -10,17 +10,18 @@
 
 package com.vaadin.testbench.unit;
 
-import java.util.Collections;
+import java.util.Set;
 
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationContext;
-import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.TestExecutionListeners;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import com.vaadin.flow.component.UI;
 import com.vaadin.testbench.unit.internal.MockVaadin;
 import com.vaadin.testbench.unit.mocks.MockSpringServlet;
+import com.vaadin.testbench.unit.mocks.SpringSecurityRequestCustomizer;
 
 /**
  * Base JUnit 4 class for UI unit testing applications based on Spring
@@ -54,25 +55,23 @@ import com.vaadin.testbench.unit.mocks.MockSpringServlet;
  * </pre>
  */
 @RunWith(SpringRunner.class)
-@ContextConfiguration(classes = SpringSupport.class)
+@TestExecutionListeners(listeners = UITestSpringLookupInitializer.class, mergeMode = TestExecutionListeners.MergeMode.MERGE_WITH_DEFAULTS)
 public abstract class SpringUIUnit4Test extends UIUnit4Test {
 
     @Autowired
     private ApplicationContext applicationContext;
 
     @Override
-    public void initVaadinEnvironment() {
-        TestSpringLookupInitializer.setApplicationContext(applicationContext);
-        MockSpringServlet servlet = new MockSpringServlet(
-                discoverRoutes(scanPackage()), applicationContext, UI::new);
-        MockVaadin.setup(UI::new, servlet, Collections.emptySet());
-        MockSpringServlet.applySpringSecurityIfPresent();
+    protected Set<Class<?>> lookupServices() {
+        return Set.of(UITestSpringLookupInitializer.class,
+                SpringSecurityRequestCustomizer.class);
     }
 
     @Override
-    protected void cleanVaadinEnvironment() {
-        // Ensure ThreadLocal is cleaned
-        TestSpringLookupInitializer.setApplicationContext(null);
-        super.cleanVaadinEnvironment();
+    public void initVaadinEnvironment() {
+        MockSpringServlet servlet = new MockSpringServlet(
+                discoverRoutes(scanPackage()), applicationContext, UI::new);
+        MockVaadin.setup(UI::new, servlet, lookupServices());
     }
+
 }
